--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -22,7 +22,15 @@ body {
       background: #393a3b;
     }
   }
+  &.is-red {
+    background: #df4444;
+    border-color: transparent;
+    color: #fff;
 
+    &:hover {
+      background: #d63e3e;
+    }
+  }
   &.is-link {
     background: #33aaff;
     border-color: transparent;
@@ -36,6 +44,7 @@ body {
   &.is-border-dark {
     border: 2px solid #393a3b;
     color: rgb(221, 221, 221);
+
     &:hover {
       color: white;
       border: 2px solid #494b4d;
@@ -44,6 +53,13 @@ body {
 
   &.no-bg {
     background-color: transparent !important;
+  }
+
+  &.disable {
+    background: #393a3b !important;
+    text-decoration: line-through;
+    cursor: not-allowed !important;
+    border-color: transparent !important;
   }
 }
 
